--- a/style.css
+++ b/style.css
@@ -62,13 +62,15 @@ header .header-content{
 }
 .header-bigimg .bigimg{
     display: block;
-    width: 87%;
+    width: 70%;
     position: absolute;
     top: -50px;
-    right: -75px;
+    right: -10px
 }
 .header-about {
-    display: flex;
+    display: flex;    width: 60%;
+66
+
     justify-content: center;
     align-items: center;
     width: 100%;
